--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,60 +87,94 @@ jobs:
         [Install]
         WantedBy=multi-user.target" | sudo tee /etc/systemd/system/lifeline-backend.service'
         
-        # Create nginx config with proper HTTPS setup for voice features
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo mkdir -p /etc/ssl/private /etc/ssl/certs && sudo yum install -y openssl && sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/lifeline.key -out /etc/ssl/certs/lifeline.crt -subj "/C=US/ST=State/L=City/O=LifeLine/CN=44.205.249.20"'
-        
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'echo "# Redirect HTTP to HTTPS for voice features
-        server {
+        # Check if HOSTNAME is an IP address or domain
+        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'if [[ ${HOSTNAME} =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo "IP address detected - using self-signed certificate for testing"
+          # Generate self-signed cert for IP
+          sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+            -keyout /etc/ssl/private/lifeline.key \
+            -out /etc/ssl/certs/lifeline.crt \
+            -subj "/C=US/ST=State/L=City/O=LifeLine/CN=${HOSTNAME}" \
+            -addext "subjectAltName=IP:${HOSTNAME}"
+          
+          # Create nginx config with self-signed SSL
+          echo "server {
             listen 80;
             server_name _;
             return 301 https://\$server_name\$request_uri;
-        }
-        
-        server {
+          }
+          
+          server {
             listen 443 ssl http2;
             server_name _;
             
-            # SSL Configuration for voice features
             ssl_certificate /etc/ssl/certs/lifeline.crt;
             ssl_certificate_key /etc/ssl/private/lifeline.key;
             ssl_protocols TLSv1.2 TLSv1.3;
-            ssl_ciphers HIGH:!aNULL:!MD5;
-            ssl_prefer_server_ciphers on;
-            
-            # Security headers for HTTPS
-            add_header Strict-Transport-Security \"max-age=31536000; includeSubDomains\" always;
-            add_header X-Frame-Options DENY;
-            add_header X-Content-Type-Options nosniff;
             
             root /home/ec2-user/lifeline/frontend;
             index index.html;
             
             location / {
-                try_files \$uri \$uri/ /index.html;
+              try_files \$uri \$uri/ /index.html;
             }
-        
+            
             location /api {
-                proxy_pass http://127.0.0.1:8000;
-                proxy_set_header Host \$host;
-                proxy_set_header X-Real-IP \$remote_addr;
-                proxy_set_header X-Forwarded-Proto \$scheme;
-                proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Host \$server_name;
+              proxy_pass http://127.0.0.1:8000;
+              proxy_set_header Host \$host;
+              proxy_set_header X-Real-IP \$remote_addr;
+              proxy_set_header X-Forwarded-Proto \$scheme;
+              proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
             }
-        }" | sudo tee /etc/nginx/conf.d/lifeline.conf'
-                
-                # Remove default nginx config that might conflict
-                ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo rm -f /etc/nginx/conf.d/default.conf /etc/nginx/sites-enabled/default'
-                
-                # Test nginx config before starting
-                ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo nginx -t'
-                
-                # Start services
-                ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo systemctl daemon-reload && sudo systemctl enable lifeline-backend && sudo systemctl start lifeline-backend && sudo systemctl enable nginx && sudo systemctl start nginx'
-                
-                # Fix frontend permissions on EC2
-                ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo chown -R nginx:nginx /home/ec2-user/lifeline/frontend && sudo chmod -R 755 /home/ec2-user/lifeline/frontend'
-                
-                # Check if services are running and debug issues
-                ssh -i private_key ${USER_NAME}@${HOSTNAME} 'echo "=== Service Status ===" && sudo systemctl is-active lifeline-backend && sudo systemctl is-active nginx && echo "=== Port Check ===" && sudo netstat -tulpn | grep -E ":(80|8000)" && echo "=== Test Django API health ===" && curl -s http://localhost:8000/api/health/ && echo "=== Test nginx ===" && curl -I http://localhost:80 && echo "=== Frontend files check ===" && ls -la /home/ec2-user/lifeline/frontend/ && echo "=== Nginx error log ===" && sudo tail -n 10 /var/log/nginx/error.log'
+          }" | sudo tee /etc/nginx/conf.d/lifeline.conf
+        else
+          echo "Domain detected - using Let'\''s Encrypt"
+          # Install certbot for Let'\''s Encrypt SSL certificates
+          sudo yum install -y python3-pip && sudo pip3 install certbot certbot-nginx
+          
+          # Create initial nginx config without SSL for domain verification
+          echo "server {
+            listen 80;
+            server_name ${HOSTNAME};
+            
+            location /.well-known/acme-challenge/ {
+              root /var/www/html;
+            }
+            
+            root /home/ec2-user/lifeline/frontend;
+            index index.html;
+            
+            location / {
+              try_files \$uri \$uri/ /index.html;
+            }
+            
+            location /api {
+              proxy_pass http://127.0.0.1:8000;
+              proxy_set_header Host \$host;
+              proxy_set_header X-Real-IP \$remote_addr;
+              proxy_set_header X-Forwarded-Proto \$scheme;
+              proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+            }
+          }" | sudo tee /etc/nginx/conf.d/lifeline.conf
+          
+          # Create web root for Let'\''s Encrypt verification
+          sudo mkdir -p /var/www/html && sudo chown -R nginx:nginx /var/www/html
+          
+          # Test nginx config and start nginx
+          sudo nginx -t && sudo systemctl enable nginx && sudo systemctl start nginx
+          
+          # Obtain SSL certificate from Let'\''s Encrypt
+          sudo certbot --nginx -d ${HOSTNAME} --non-interactive --agree-tos --email admin@${HOSTNAME} --redirect
+          
+          # Setup automatic certificate renewal
+          echo "0 12 * * * /usr/local/bin/certbot renew --quiet" | sudo crontab -
+        fi'
+        
+        # Start backend service
+        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo systemctl daemon-reload && sudo systemctl enable lifeline-backend && sudo systemctl start lifeline-backend'
+        
+        # Fix frontend permissions on EC2
+        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo chown -R nginx:nginx /home/ec2-user/lifeline/frontend && sudo chmod -R 755 /home/ec2-user/lifeline/frontend'
+        
+        # Check if services are running and debug issues
+        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'echo "=== Service Status ===" && sudo systemctl is-active lifeline-backend && sudo systemctl is-active nginx && echo "=== Port Check ===" && sudo netstat -tulpn | grep -E ":(80|443|8000)" && echo "=== Test Django API health ===" && curl -s http://localhost:8000/api/health/ && echo "=== Test HTTPS ===" && curl -I https://${HOSTNAME} && echo "=== Frontend files check ===" && ls -la /home/ec2-user/lifeline/frontend/ && echo "=== SSL Certificate Status ===" && sudo certbot certificates && echo "=== Nginx error log ===" && sudo tail -n 10 /var/log/nginx/error.log'
