--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,23 +34,39 @@ jobs:
         echo "$PRIVATE_KEY" > private_key
         chmod 600 private_key
         
+        # Resolve hostname to IP for SSH connections (handles DNS issues)
+        if [[ ${HOSTNAME} =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          SSH_TARGET=${HOSTNAME}
+          echo "Using IP address: ${SSH_TARGET}"
+        else
+          echo "Resolving domain: ${HOSTNAME}"
+          SSH_TARGET=$(nslookup ${HOSTNAME} | grep -A1 "Non-authoritative answer:" | grep "Address:" | tail -1 | awk '{print $2}')
+          if [[ -z "$SSH_TARGET" ]] || [[ "$SSH_TARGET" == "" ]]; then
+            echo "DNS resolution failed, trying dig..."
+            SSH_TARGET=$(dig +short ${HOSTNAME} | head -n1)
+          fi
+          if [[ -z "$SSH_TARGET" ]] || [[ "$SSH_TARGET" == "" ]]; then
+            echo "ERROR: Could not resolve ${HOSTNAME} to IP address"
+            echo "Please check your DNS settings and try again"
+            exit 1
+          fi
+          echo "Resolved ${HOSTNAME} to IP: ${SSH_TARGET}"
+        fi
+        
         # Stop services and clean up
-        ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} 'sudo systemctl stop lifeline-backend || true; sudo systemctl stop nginx || true; sudo rm -rf /home/ec2-user/lifeline; mkdir -p /home/ec2-user/lifeline'
+        ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${SSH_TARGET} 'sudo systemctl stop lifeline-backend || true; sudo systemctl stop nginx || true; sudo rm -rf /home/ec2-user/lifeline; mkdir -p /home/ec2-user/lifeline'
         
         # Copy files to temporary locations
-        scp -i private_key -r frontend/build/* ${USER_NAME}@${HOSTNAME}:/tmp/frontend_build/
-        scp -i private_key -r backend/* ${USER_NAME}@${HOSTNAME}:/tmp/backend/
+        scp -i private_key -r frontend/build/* ${USER_NAME}@${SSH_TARGET}:/tmp/frontend_build/
+        scp -i private_key -r backend/* ${USER_NAME}@${SSH_TARGET}:/tmp/backend/
         
         # Move files to proper locations and fix permissions
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} '
-          # Create directory structure first
-          mkdir -p /home/ec2-user/lifeline/backend
-          mkdir -p /home/ec2-user/lifeline/frontend
-          
+        ssh -i private_key ${USER_NAME}@${SSH_TARGET} '
           # Move backend files
           cp -r /tmp/backend/* /home/ec2-user/lifeline/backend/
           
-          # Move frontend files  
+          # Move frontend files
+          mkdir -p /home/ec2-user/lifeline/frontend
           cp -r /tmp/frontend_build/* /home/ec2-user/lifeline/frontend/
           
           # Fix critical permission issues that cause 500 errors
@@ -63,16 +79,16 @@ jobs:
         '
         
         # Install and configure Python dependencies
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'cd /home/ec2-user/lifeline/backend && python3 -m venv ../venv && source ../venv/bin/activate && pip install -r requirements.txt && pip install gunicorn'
+        ssh -i private_key ${USER_NAME}@${SSH_TARGET} 'cd /home/ec2-user/lifeline && python3 -m venv venv && source venv/bin/activate && pip install -r backend/requirements.txt && pip install gunicorn'
         
         # Django setup
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'cd /home/ec2-user/lifeline/backend/LifeLine && source /home/ec2-user/lifeline/venv/bin/activate && DJANGO_SECRET_KEY='"'"'${{ secrets.DJANGO_SECRET_KEY }}'"'"' OPENAI_API_KEY='"'"'${{ secrets.OPENAI_API_KEY }}'"'"' python manage.py migrate && DJANGO_SECRET_KEY='"'"'${{ secrets.DJANGO_SECRET_KEY }}'"'"' OPENAI_API_KEY='"'"'${{ secrets.OPENAI_API_KEY }}'"'"' python manage.py collectstatic --noinput'
+        ssh -i private_key ${USER_NAME}@${SSH_TARGET} 'cd /home/ec2-user/lifeline/backend/LifeLine && source /home/ec2-user/lifeline/venv/bin/activate && DJANGO_SECRET_KEY='"'"'${{ secrets.DJANGO_SECRET_KEY }}'"'"' OPENAI_API_KEY='"'"'${{ secrets.OPENAI_API_KEY }}'"'"' python manage.py migrate && DJANGO_SECRET_KEY='"'"'${{ secrets.DJANGO_SECRET_KEY }}'"'"' OPENAI_API_KEY='"'"'${{ secrets.OPENAI_API_KEY }}'"'"' python manage.py collectstatic --noinput'
         
         # Create environment file for systemd
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'echo "DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}" | sudo tee /etc/lifeline.env && echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" | sudo tee -a /etc/lifeline.env && sudo chmod 644 /etc/lifeline.env'
+        ssh -i private_key ${USER_NAME}@${SSH_TARGET} 'echo "DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}" | sudo tee /etc/lifeline.env && echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" | sudo tee -a /etc/lifeline.env && sudo chmod 644 /etc/lifeline.env'
         
         # Create systemd service
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'echo "[Unit]
+        ssh -i private_key ${USER_NAME}@${SSH_TARGET} 'echo "[Unit]
         Description=LifeLine Django Backend
         After=network.target
         
@@ -87,10 +103,10 @@ jobs:
         [Install]
         WantedBy=multi-user.target" | sudo tee /etc/systemd/system/lifeline-backend.service'
         
-        # Check if HOSTNAME is an IP address or domain
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'if [[ ${HOSTNAME} =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-          echo "IP address detected - using self-signed certificate for testing"
-          # Generate self-signed cert for IP
+        # Check if HOSTNAME is an IP address or domain and configure SSL accordingly
+        ssh -i private_key ${USER_NAME}@${SSH_TARGET} 'if [[ ${HOSTNAME} =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo "IP address detected - using self-signed certificate"
+          sudo mkdir -p /etc/ssl/private /etc/ssl/certs
           sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
             -keyout /etc/ssl/private/lifeline.key \
             -out /etc/ssl/certs/lifeline.crt \
@@ -128,7 +144,9 @@ jobs:
             }
           }" | sudo tee /etc/nginx/conf.d/lifeline.conf
         else
-          echo "Domain detected - using Let'\''s Encrypt"
+          echo "Domain detected: ${HOSTNAME} - setting up Let'\''s Encrypt"
+          sudo mkdir -p /etc/ssl/private /etc/ssl/certs
+          
           # Install certbot for Let'\''s Encrypt SSL certificates
           sudo yum install -y python3-pip && sudo pip3 install certbot certbot-nginx
           
@@ -160,21 +178,70 @@ jobs:
           # Create web root for Let'\''s Encrypt verification
           sudo mkdir -p /var/www/html && sudo chown -R nginx:nginx /var/www/html
           
+          # Remove conflicting configs
+          sudo rm -f /etc/nginx/conf.d/default.conf /etc/nginx/sites-enabled/default
+          
           # Test nginx config and start nginx
           sudo nginx -t && sudo systemctl enable nginx && sudo systemctl start nginx
           
-          # Obtain SSL certificate from Let'\''s Encrypt
-          sudo certbot --nginx -d ${HOSTNAME} --non-interactive --agree-tos --email admin@${HOSTNAME} --redirect
+          # Wait a moment for nginx to fully start
+          sleep 5
           
-          # Setup automatic certificate renewal
-          echo "0 12 * * * /usr/local/bin/certbot renew --quiet" | sudo crontab -
+          # Try to obtain SSL certificate from Let'\''s Encrypt
+          echo "Attempting to get SSL certificate for ${HOSTNAME}"
+          if sudo certbot --nginx -d ${HOSTNAME} --non-interactive --agree-tos --email admin@${HOSTNAME} --redirect; then
+            echo "SSL certificate obtained successfully"
+            # Setup automatic certificate renewal
+            echo "0 12 * * * /usr/local/bin/certbot renew --quiet" | sudo crontab -
+          else
+            echo "SSL certificate failed, falling back to self-signed certificate"
+            # Create self-signed certificate as fallback
+            sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+              -keyout /etc/ssl/private/lifeline.key \
+              -out /etc/ssl/certs/lifeline.crt \
+              -subj "/C=US/ST=State/L=City/O=LifeLine/CN=${HOSTNAME}"
+            
+            # Update nginx config with self-signed certificate
+            echo "server {
+              listen 80;
+              server_name ${HOSTNAME};
+              return 301 https://\$server_name\$request_uri;
+            }
+            
+            server {
+              listen 443 ssl http2;
+              server_name ${HOSTNAME};
+              
+              ssl_certificate /etc/ssl/certs/lifeline.crt;
+              ssl_certificate_key /etc/ssl/private/lifeline.key;
+              ssl_protocols TLSv1.2 TLSv1.3;
+              
+              root /home/ec2-user/lifeline/frontend;
+              index index.html;
+              
+              location / {
+                try_files \$uri \$uri/ /index.html;
+              }
+              
+              location /api {
+                proxy_pass http://127.0.0.1:8000;
+                proxy_set_header Host \$host;
+                proxy_set_header X-Real-IP \$remote_addr;
+                proxy_set_header X-Forwarded-Proto \$scheme;
+                proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+              }
+            }" | sudo tee /etc/nginx/conf.d/lifeline.conf
+            
+            # Reload nginx with new config
+            sudo systemctl reload nginx
+          fi
         fi'
         
         # Start backend service
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo systemctl daemon-reload && sudo systemctl enable lifeline-backend && sudo systemctl start lifeline-backend'
+        ssh -i private_key ${USER_NAME}@${SSH_TARGET} 'sudo systemctl daemon-reload && sudo systemctl enable lifeline-backend && sudo systemctl start lifeline-backend'
         
         # Fix frontend permissions on EC2
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo chown -R nginx:nginx /home/ec2-user/lifeline/frontend && sudo chmod -R 755 /home/ec2-user/lifeline/frontend'
+        ssh -i private_key ${USER_NAME}@${SSH_TARGET} 'sudo chown -R nginx:nginx /home/ec2-user/lifeline/frontend && sudo chmod -R 755 /home/ec2-user/lifeline/frontend'
         
         # Check if services are running and debug issues
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'echo "=== Service Status ===" && sudo systemctl is-active lifeline-backend && sudo systemctl is-active nginx && echo "=== Port Check ===" && sudo netstat -tulpn | grep -E ":(80|443|8000)" && echo "=== Test Django API health ===" && curl -s http://localhost:8000/api/health/ && echo "=== Test HTTPS ===" && curl -I https://${HOSTNAME} && echo "=== Frontend files check ===" && ls -la /home/ec2-user/lifeline/frontend/ && echo "=== SSL Certificate Status ===" && sudo certbot certificates && echo "=== Nginx error log ===" && sudo tail -n 10 /var/log/nginx/error.log'
+        ssh -i private_key ${USER_NAME}@${SSH_TARGET} 'echo "=== Service Status ===" && sudo systemctl is-active lifeline-backend && sudo systemctl is-active nginx && echo "=== Port Check ===" && sudo netstat -tulpn | grep -E ":(80|443|8000)" && echo "=== Test Django API health ===" && curl -s http://localhost:8000/api/health/ || echo "API not ready yet" && echo "=== Test HTTP access ===" && curl -I http://localhost:80 && echo "=== Frontend files check ===" && ls -la /home/ec2-user/lifeline/frontend/ && echo "=== Nginx configuration ===" && sudo nginx -t && echo "=== Nginx error log ===" && sudo tail -n 5 /var/log/nginx/error.log || echo "No nginx errors yet"'
